# PDEs

./: LICENSE  PDEs.cabal  README.md  laplaceSimple.hs  plotmatrix.py
examples/: out.txt
