name:                PDEs
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
-- author:              
-- maintainer:          
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable laplaceSimple
  ghc-options: -Wall -threaded -O2 -rtsopts
  main-is: laplaceSimple.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.7,
                       containers > 0.5,
                       repa > 3.2,
                       repa-algorithms > 3.2,
                       repa-io > 3.2
  -- hs-source-dirs:      
  default-language:    Haskell2010
